style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
}

.icon {
    display: none;
}

.mobile-menu {
    display: none;
}

.mobile-menu-icon {
    display: none;
}

.search-section {
    display: flex;
    align-items: center;
    width: 100%;
    gap: 30px;
    justify-content: center;
}

.logo {
    height: 80px;
}

.page-title {
    font-size: 28px;
    color: #01310b;
}

#search-btn{
    background-color:white;
    border: none;
     cursor: pointer
}

#search-btn:hover {
    opacity: 0.8;
}

#search-btn:active {
    opacity: 0.7;
    background-color: rgb(61, 63, 61);
}

input {
    width: 400px;
    margin-left: 30px;
    padding: 3px;
    border:  0.1rem solid rgb(186, 182, 184);
    border-radius: 6px;
    box-shadow: #3d3b3b;
}

.basket {
    width: 30px;
}

nav {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #01310b;
    height: 80px;
    width: 100%;
}

.nav-menu a {
    text-decoration: none;
    color: #fdf9f9;
    font-size: 20px;
    margin-left: 30px;
}

.hero {
    display: flex;
    align-items: center;
    flex-direction: column;
    background-color: rgba(30, 55, 16, 0.952);
}


.banner-hero {
    margin-top: 5px;
    width: 80%;
    height: 300px;
    background-image: url(./assets/Banner\ elegante\ natal.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;

}

.banner-title {
    margin: 60px 30px 0 180px;
    font-size: 48px;
    color: #FFF;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: #000;
}

.banner-btn {
    background-color: rgb(19, 162, 19);
    height: 40px;
    width: 200px;
    color: #ffffff;
    font-size: 16px;
    font-weight: 600;
    border: none;
    border-radius: 15px;
    margin: 30px 0 0 30px;
   ;

}

.banner-btn:hover {
    opacity: 0.8;
}

.banner-btn:active {
    opacity: 0.7;
}

.quick-lincks {
    margin-top: 30px;
    margin-bottom: 30px;
    display: flex;
    align-items: center;
    gap: 30px;
}

.quick-links-border {
    height: 120px;
    ;
    width: 120px;
    border: 3px solid #FFF;
    border-radius: 100%;
}

.quick-icons {
    height: 70px;
    width: 60px;
    object-fit: cover;
    margin: 20px 25px;
}

h2 {
    color: #ffffff;
    margin-bottom: 15px;
}

.emphasis-Product {
    display: flex;
    gap: 30px;
    margin-bottom: 15px;
}

.Christmas-Product {
    display: flex;
    gap: 30px;
}

.products img {
    width: 300px;
    height: 260px;
    border-radius: 10px;
    border: 0.5rem solid rgb(252, 9, 9);
}

.products {
    background-color: #ffffff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
}

h4 {
    margin: 6px 0 3px 0;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    color: #010b01;
    font-weight: normal;
    font-size: 20px;
}

.products-price {
    margin-right: auto;
    padding: 5px;
}

.products-btn {
    height: 30px;
    width: 120px;
    margin-bottom: 8px;
    margin-left: 140px;
    border-radius: 12px;
    background-color: rgb(19, 162, 19);
    color: #ffffff;
    font-size: 16px;
    font-weight: 300;
    border: none;
    cursor: pointer;
}

.differential-session {
    display: flex;
    gap: 100px;
    margin-bottom: 30px;
}

.differential img {
    color: #ffffff;
    display: flex;
    height: 60px;
    margin: 30px 0 3px 45px;
    background-color: #FFF;
    border-radius: 15px;
}

.differential h4 {
    color: #ffffff;
    font-size: 24px;

}

#handcrafted-assembly {
    margin-left: 80px;
}

footer {
    width: 100vw;
    display: flex;
    flex-direction: column;
    background-color: #fdf9f9;
}

.contacts {
    display:flex;
    align-items: center;
    justify-content: center;
    gap: 1.5rem;
}

.contacts a {
 text-decoration: none;
 color: #f0f8ff;
}

.social-networks {
display: flex;
gap: 2rem;
align-items: center;
justify-content: center;
}

.social-networks img {
    width: 60px;
    margin-top: 0.5rem;
    
}

.developer {
    background-color: #f0e9e9;
    width: 100vw;
    height: 4rem;
    display: flex;
    justify-content: center;

  
}

@media screen and (max-width: 770px) {
    .container {
        display: flex;
        flex-direction: column;
    }

    nav {
        display: none;
    }

    .search-section {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100vw;
        gap: 1px;
    }

    logo {
        height: 40px;
        display: inline;
        margin: 0 1rem 0 1rem;
    }

    .page-title {
        font-size: 12px;
        color: #01310b;
        margin: 0 1rem 0 1rem;

    }

    input {
        width: 160px;
        margin: 0 0.5rem 0 0.5rem;
        padding: 2px;
        border: none;
    }

    .basket {
        width: 12px;
        height: auto;
        margin: 0 0.5rem 0 1rem;
        display: block;
    }

    .icon {
        display: inline-block;
        height: 14px;
        width: auto;
    }

    .hero {
        width: 100vw;
        height: 100%;
    }

    .banner-hero {
        margin-top: 5px;
        width: 100vw;
        height: 400px;
        background-image: url(./assets/Banner\ elegante\ natal.png);
        background-repeat: no-repeat;
        background-size: cover;
        background-position: center;
    }

    .banner-title {
        margin: 12px 10px 0 30px;
        font-size: 24px;
        color: #FFF;
        -webkit-text-stroke-width: 1px;
        -webkit-text-stroke-color: #000;
    }

    .banner-btn {
        background-color: rgb(19, 162, 19);
        height: 25px;
        width: 130px;
        color: #ffffff;
        font-size: 12px;
        font-weight: 600;
        border: none;
        border-radius: 10px;
        margin: 10px 10px;
        cursor: pointer;
    }

    .quick-lincks {
        display: none;
    }

    .ProductShowcase {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: 100vw;

    }

    .emphasis-Product {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .Christmas-Product {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    h2 {
        font-size: 14px;
        color: #ffffff;
        margin: 5px;
    }


    .products img {
        width: 250px;
        height: 180px;
        margin-top: 5px;
        border-radius: 5px;
    }

    .products {
        width: 290px;
        background-color: #ffffff;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        border-radius: 10px;
    }

    h4 {
        margin: 6px 0 3px 0;
        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
        color: #010b01;
        font-weight: 200;
        font-size: 16px;
    }

    .products-price {
        margin-right: auto;
        padding: 5px;
        font-size: 12px;
    }
    .products-btn {
    height: 20px;
    width: 100px;
    margin-bottom: 8px;
    margin-left: 140px;
    border-radius: 8px;
    background-color: rgb(19, 162, 19);
    color: #ffffff;
    font-size: 12px;
    font-weight: 300;
    border: none;
    cursor: pointer;
}
.differential {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 10px auto;
}

.differential img {
    color: #ffffff;
    display: flex;
    height: 40px;
    background-color: #FFF;
    border-radius: 15px;
    margin: 5px auto;
}

.differential h4 {
    color: #ffffff;
    font-size: 16px;
    align-items: center;
}

footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.contacts {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 25px;
    background-color: #ffffff;

}

.contacts a {
    font-size: 8px;
    text-decoration: none;
    color: #3d3b3b;
    margin-bottom: 15px;
}

.social-networks {
    display: flex;
    gap: 30px;
    align-items: center;
    justify-content: center;
    background-color: 0;
}

.social-networks img {
    width: 30px;
}

.developer {
    font-size: 10px;
    margin-top: 10px;
    color: #3d3b3b;
}

}

